# lazy_agent_sim

./: .gitignore  CONTRIBUTING.md  README.md
ros_gz_lazy_agent_sim_applications/agent_local_comms_server/: README.md  package.xml  setup.py
ros_gz_lazy_agent_sim_applications/agent_local_comms_server/agent_local_comms_server/: agent_local_comms_server.py  gz_agent_comms.py  gz_comms_server.py  odom_tf.py  packets.py  pose_tf.py  robot_comms_model.py  ros_comms_server.py  udp_agent_comms.py
ros_gz_lazy_agent_sim_applications/agent_local_comms_server/doc/: comms_class.puml  comms_sequence.puml  software_architecture.puml
ros_gz_lazy_agent_sim_applications/agent_local_comms_server/launch/: agent_local_comms_server.launch.py  gz_agent.launch.py  gz_agents.launch.py  main.launch.py  odom_tf.launch.py  pose_tf.launch.py  robot_model.launch.py  udp_agent.launch.py  udp_agents.launch.py
ros_gz_lazy_agent_sim_applications/cpp_epuck/: CMakeLists.txt  package.xml
ros_gz_lazy_agent_sim_applications/cpp_epuck/include/cpp_epuck/: EpuckPackets.hpp  NetworkFactory.hpp  RobotCommsModel.hpp  UDPComms.hpp  types.hpp
ros_gz_lazy_agent_sim_applications/cpp_epuck/launch/: main.launch.py
ros_gz_lazy_agent_sim_applications/cpp_epuck/src/: cpp_epuck.cpp
ros_gz_lazy_agent_sim_applications/cpp_epuck/test/: mock_NetworkFactory.hpp  test_BaseRobotCommsModel.cpp  test_RobotCommsModel.cpp
ros_gz_lazy_agent_sim_applications/dummy_application/: CMakeLists.txt  package.xml
ros_gz_lazy_agent_sim_applications/lazy_agent_sim_interfaces/: CMakeLists.txt  package.xml
ros_gz_lazy_agent_sim_applications/lazy_agent_sim_interfaces/msg/: Boundary.msg  EpuckInteraction.msg  EpuckKnowledgePacket.msg  EpuckKnowledgeRecord.msg
ros_gz_lazy_agent_sim_bringup/: CMakeLists.txt  package.xml
ros_gz_lazy_agent_sim_bringup/config/: epuck2.rviz  ros_gz_lazy_agent_sim_bridge.yaml
ros_gz_lazy_agent_sim_bringup/launch/: epuck2.launch.py
ros_gz_lazy_agent_sim_description/: CMakeLists.txt  package.xml
ros_gz_lazy_agent_sim_description/models/epuck2/: 00-sdf.patch  01-visualise-sensors.patch  epuck2.proto  epuck2.sdf  epuck2.urdf  generate_sdf  model.config
ros_gz_lazy_agent_sim_gazebo/: CMakeLists.txt  README.md  package.xml
ros_gz_lazy_agent_sim_gazebo/hooks/: README.md
ros_gz_lazy_agent_sim_gazebo/include/ros_gz_lazy_agent_sim_gazebo/: BasicSystem.hh  FullSystem.hh
ros_gz_lazy_agent_sim_gazebo/src/: BasicSystem.cc  FullSystem.cc
ros_gz_lazy_agent_sim_gazebo/worlds/: epuck2.sdf
