<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cpp_epuck</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="esh.jordan@gmail.com">Jordan Esh</maintainer>
  <license>TODO: License declaration</license>

  <!-- Build Dependencies -->
  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <!-- General Dependancies (Build & Exec) -->
  <depend>rclcpp</depend>

  <!-- Testing Dependencies -->
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_gmock</test_depend>

  <!-- Linting Dependencies -->
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_clang_tidy</test_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>clangd</test_depend>
  <test_depend>gcovr</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>